Wed Nov 17 23:47:30 2004  NAKAMURA, Hiroshi  <nakahiro@sarion.co.jp>

	* test/ruby/test_settracefunc.rb: added.  [ruby-dev:24884]

Wed Nov 17 11:48:17 2004  Michael Neumann  <mneumann@ruby-lang.org>

	* lib/xmlrpc/parser.rb, test/xmlrpc/test_features.rb: fixed "assinging
	  to constants" warnings

Wed Nov 17 18:59:16 2004  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* process.c (proc_getrlimit, proc_setrlimit): add rb_secure(2) to
	  methods of Process.{getrlimit,setrlimit}

Wed Nov 17 13:05:10 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (rb_push_glob): fix overrun.  [ruby-dev:24886]

Wed Nov 17 09:38:18 2004  Johan Holmberg  <holmberg@iar.se>

	* re.c (rb_reg_initialize_m): should raise exception instead of
	  compile error.  [ruby-core:03755]

Wed Nov 17 03:42:45 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (rb_str_splice): move rb_str_modify() after
	  StringValue(), which may alter the receiver.  [ruby-dev:24878]

	* error.c (rb_error_frozen): now raise RuntimeError instead of
	  TypeError.

Tue Nov 16 21:22:47 2004  Michael Neumann  <mneumann@ruby-lang.org>

	* lib/xmlrpc/server.rb (CGIServer): fixed bug when client sends
	  "Content-typ: text/xml; ..."

Tue Nov 16 23:45:07 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* numeric.c (flo_divmod): protect float values from GC by
	  assignment to local variables.  [ruby-dev:24873]

Tue Nov 16 14:31:54 2004  Michael Neumann  <mneumann@ruby-lang.org>

	* test/xmlrpc/*: imported and refactored original test cases.

	* test/xmlrpc/test_webrick_server.rb, test/xmlrpc/webrick_testing.rb:
	  added test case that starts up a WEBrick XML-RPC server and performs
	  some tests on it (both http and https servers are started).

	* lib/xmlrpc/create.rb (XMLWriter::each_installed_writer),
	  lib/xmlrpc/parser.rb (XMLParser::each_installed_parser):
	  added methods to simply original test cases

	* lib/xmlrpc/parser.rb, lib/xmlrpc/datetime.rb: applied patch by