@@ -1,3 +1,10 @@
+Thu Nov 18 10:10:14 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* io.c, rubyio.h (rb_io_modenum_flags): exported.
+
+	* ext/stringio/stringio.c (strio_initialize): allow Fixnum as mode as
+	  well as IO.new does.  [ruby-dev:24896]
+
 Wed Nov 17 23:47:30 2004  NAKAMURA, Hiroshi  <nakahiro@sarion.co.jp>
 
 	* test/ruby/test_settracefunc.rb: added.  [ruby-dev:24884]
